--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div>
-  <h1>Ele <3</h1>
+<div class="main-container">
+  <app-bee-simulator></app-bee-simulator>
+  <!-- <h1>ELE <3</h1> -->
 </div>
