--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="main-container">
   <app-bee-simulator></app-bee-simulator>
-  <!-- <h1>ELE <3</h1> -->
+  <h1 id="title">ELE <3</h1>
 </div>
