--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,19 @@
 .main-container {
   width: 100%;
+  height: 100%;
 //   display: flex;
   justify-content: center;
   align-items: center;
   #title {
     white-space: nowrap;
-    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     margin: 0;
-    font-size: 10em;
+    font-size: 5rem;
+
     color: rgb(239, 239, 82)
   }
 }
